src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Largest_Grant__c</fullName>
        <inlineHelpText>The prospect’s largest grant to Rare</inlineHelpText>
        <label>Largest Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Action_Date__c</fullName>
        <inlineHelpText>When was the last step taken with this prospect?</inlineHelpText>
        <label>Last Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Action__c</fullName>
        <inlineHelpText>What was the last step taken in the solicitation of this prospect?</inlineHelpText>
        <label>Last Action</label>
        <picklist>
            <picklistValues>
                <fullName>Sent LOI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Followed up on LOI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developed Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Followed up on Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Acknowledgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended Event</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Grant_Date__c</fullName>
        <inlineHelpText>Date of the prospect&apos;s most recent grant to Rare</inlineHelpText>
        <label>Last Grant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Grant__c</fullName>
        <inlineHelpText>Amount of prospect&apos;s most recent grant to Rare</inlineHelpText>
        <label>Last Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moves_Manager_PTS__c</fullName>
        <inlineHelpText>The development staffer responsible for managing the prospect’s relationship to Rare, including the solicitation.</inlineHelpText>
        <label>Moves Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Alissa Moen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Britta Garfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia Mayoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Coppenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerald Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanette Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiakai Yuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Chase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kate Dixon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lisa Pharoah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcia Cota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martha Piper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paolo Domondon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peck Gee Chua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robin Heller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarah Schwimmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila Dennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybil Greenhalgh</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Moves_Manager__c</fullName>
        <inlineHelpText>Schedules, monitors, and ensures execution of communications and strategic moves, manages record in SF, logs related tasks,ensures giving history is up to date, works w/relationship owner to revise strategy and next moves,maintains hard copy grant files.</inlineHelpText>
        <label>Moves Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Action_Date__c</fullName>
        <inlineHelpText>By when will you take the next action?</inlineHelpText>
        <label>Next Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Action__c</fullName>
        <inlineHelpText>What is the next step to be taken with this prospect?</inlineHelpText>
        <label>Next Action</label>
        <picklist>
            <picklistValues>
                <fullName>Send LOI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOI Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Acknowledgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attend Event</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Over_How_Many_Years__c</fullName>
        <label>Over How Many Years?</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Description__c</fullName>
        <label>Partner Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Specializations__c</fullName>
        <description>This field captures information about the unique skills offered by the partner to Rare&apos;s campaigns.</description>
        <inlineHelpText>This field captures information about the unique skills offered by the partner to Rare&apos;s campaigns.</inlineHelpText>
        <label>Partner Specializations</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Strategy__c</fullName>
        <label>Partner Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_Manager__c</fullName>
        <label>Partnership Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pride_Program_Manager__c</fullName>
        <label>Pride Program Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_RARE_Trustee_Contact__c</fullName>
        <label>Primary RARE Trustee Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Allen J. Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angus Parker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbara Hernandez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caroline Gabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carter Roberts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Wilcove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edward Soule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hannelore Grantham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herbert A. Raffaele</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Ellis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexi Rome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melissa Dann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nancy Mackinnon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Ridgely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger Pasquier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terry Pelster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wendy Paulson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kim Syman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edith McBean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruth Yeoh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <inlineHelpText>What is the Cash Quality Discount of this solicitation?
0% or Blank = Longshot / Not for Forecast
25% = New grant
75% = Renewal
100% = Grant Received</inlineHelpText>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_Interest__c</fullName>
        <label>Program/Area of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Pride - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deforestation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmeat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endangered Species</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stoves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisheries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coral Reefs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biodiversity - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Health and Well-being</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rare_Affiliation__c</fullName>
        <label>Rare Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Current Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Implementing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Implementing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rare_Project_s_of_Interest__c</fullName>
        <inlineHelpText>The board-approved project, program or initiative that the prospect is being asked to or is likely to fund.</inlineHelpText>
        <label>Rare Project(s) of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Fish Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever-Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever-Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever-Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever-Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever-Indonesia Prototypes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever-Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever-Philippines Prototypes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phils-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronesia 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever-Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever-Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs-Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs-Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs-Panama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Adaptation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livelihoods</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Readiness_to_Give__c</fullName>
        <inlineHelpText>How inclined is this prospect to give to Rare?</inlineHelpText>
        <label>Readiness to Give</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Details__c</fullName>
        <label>Referral Details</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Donor Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Asia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Regions</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South-Eastern Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia and New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melanesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polynesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regions_of_Interest__c</fullName>
        <label>Regions of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Asia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Owner__c</fullName>
        <inlineHelpText>Best person to advance Rare’s relationship and the one prospect will have the hardest time saying “no” to. Holds ultimate responsibility for account, annual &amp; long term strategy, ask amount(more often than not makes the ask), is primary face to donor.</inlineHelpText>
        <label>Relationship Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relevant_Giving_Area_Priority__c</fullName>
        <label>Relevant Giving Area/Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Biodiversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Networks and Collaborations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resilient Local Economies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Drinking Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Resource Management</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Segment__c</fullName>
        <label>Secondary Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Staff__c</fullName>
        <inlineHelpText>Rare staff person (program or development) who is working to further the solicitation</inlineHelpText>
        <label>Secondary Staff</label>
        <picklist>
            <picklistValues>
                <fullName>Martha Piper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila Dennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanette Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Chase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia Mayoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kate Dixon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybil Greenhalgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerald Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Coppenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Britta Garfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lisa Pharoah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peck Gee Chua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarah Schwimmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paolo Domondon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keith Alger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Watkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patrick Mehlman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Butler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooke Sadowsky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Walker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taufiq Alimi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rocky Sanchez Tirona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dale Galvin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiakai Yuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia Pessoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rafael Calederon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pablo Granados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevin Green</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>BINGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-lateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network/Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>